results page edits again

--- a/index.html
+++ b/index.html
@@ -49,15 +49,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function coldAdd(){ //start of code for function to be executed 
             cold_count = cold_count + 1; //function to run that increases variable by 1 
         } //end of code for function to be executed 
+	
+	var resultText = document.getElementById("results")
 
-  </script>
-
-<p id="results"> resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; </p>
-  <script>
+</script>
 	  // change content
-	  var resultText = document.getElementById("results");
-	  
-  </script>
+	 
 
 
 <!--/next lines set up app to display pages within html body -->
@@ -190,6 +187,7 @@ after initially displaying ant htmml body not part of a page first-->
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
 		<a href="#eight" class="w3-btn w3-teal"> Results</a>
+		<p id="results">resultText.innerHTML = "Probability it is allergies =" + allergy percent + "<br> Probability it is a cold =" + coldPercent;<p/>
 		
     	</div><!--/changing html content using innerhtml property -->	
 	
