--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             cold_count = cold_count + 1; //function to run that increases variable by 1
 		alert(cold_count);
         } //end of code for function to be executed 
+	
+	function percentage(allergyPercent, coldPercent){
+	   return(allergy_count/6)*100
+	   return(cold_count/6)*100
+	}
+		
+	var resultText = document.getElementById("results")
+	<p id="results">resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;<p/>
 
 </script>
 	  // change content
@@ -185,14 +193,9 @@ after initially displaying ant htmml body not part of a page first-->
 	</div>
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
-		<p id="results">resultText.innerHTML = "Probability it is allergies =" + allergy percent + "<br> Probability it is a cold =" + coldPercent;<p/>
 		
     	</div><!--/changing html content using innerhtml property -->
 
-
-<script>
-	var resultText = document.getElementById("results")
-</script>
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
