missing # on line 180

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ after initially displaying ant htmml body not part of a page first-->
 		<h1>Results</h1>
 	</div>
 	
-	<a href="results" onclick="getresults();" class="w3-btn w3-black">Get your results here</a>
+	<a href="#results" onclick="getresults();" class="w3-btn w3-black">Get your results here</a>
 	<p id="results-section"></p>
 		
 </div><!--/changing html content using innerhtml property -->
