zhooshing up my app colors

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ after initially displaying ant htmml body not part of a page first-->
 <div id="content" class="w3-container">
 	<p>Are you feeling like you might have a cold but wonder if it is allergies. Answer a few short questions to find out!</p>
 	
-	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a>
+	<a href="#one" class="w3-btn w3-purple w3-round"> Get Started </a>
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
@@ -105,7 +105,7 @@ after initially displaying ant htmml body not part of a page first-->
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
         	<p>Are your eyes watery or itchy?</p>
-		<a href="#two" onclick="allergyAdd();" class="w3-btn w3-teal"> Yes</a>
+		<a href="#two" onclick="allergyAdd();" class="w3-btn w3-blue-gray"> Yes</a>
 		<a href="#two" onclick="coldAdd();" class="w3-btn w3-teal"> No</a>
     	</div><!--/content -->
 </div>
@@ -117,7 +117,7 @@ after initially displaying ant htmml body not part of a page first-->
 	
 	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
 		<p>Do you have a fever?</p>
-		<a href="#three" onclick="coldAdd();" class="w3-btn w3-teal"> Yes</a>
+		<a href="#three" onclick="coldAdd();" class="w3-btn w3-blue-gray"> Yes</a>
 		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-teal"> No</a>
 	</div><!--/content -->
 </div>	
@@ -129,7 +129,7 @@ after initially displaying ant htmml body not part of a page first-->
 	
 	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
 		<p>Do you have a sore throat?</p>
-		<a href="#four" onclick="coldAdd();" class="w3-btn w3-teal"> Yes</a>
+		<a href="#four" onclick="coldAdd();" class="w3-btn w3-blue-gray"> Yes</a>
 		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-teal"> No</a>
 	</div><!--/content -->
 </div>
@@ -141,7 +141,7 @@ after initially displaying ant htmml body not part of a page first-->
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
         	<p>Are your symptoms seasonal or chronic?</p>
-		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-teal"> Yes</a>
+		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-blue-gray"> Yes</a>
 		<a href="#five" onclick="coldAdd();" class="w3-btn w3-teal"> No</a>
     	</div><!--/content -->
 </div>
@@ -153,7 +153,7 @@ after initially displaying ant htmml body not part of a page first-->
 	
 	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
 		<p>Do you have general aches and pains?</p>
-		<a href="#six" onclick="coldAdd();" class="w3-btn w3-teal"> Yes</a>
+		<a href="#six" onclick="coldAdd();" class="w3-btn w3-blue-gray"> Yes</a>
 		<a href="#six" onclick="allergyAdd();" class="w3-btn w3-teal"> No</a>
 	</div><!--/content -->
 </div>
@@ -165,7 +165,7 @@ after initially displaying ant htmml body not part of a page first-->
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
         	<p>Is your mucus thin and watery?</p>
-		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-teal"> Yes</a>
+		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-blue-gray"> Yes</a>
 		<a href="#results" onclick="coldAdd();" class="w3-btn w3-teal"> No</a>
     	</div><!--/content -->
 </div>
@@ -175,7 +175,8 @@ after initially displaying ant htmml body not part of a page first-->
 		<h1>Results</h1>
 	</div>
 	
-	<a href="#results" onclick="getresults();" class="w3-btn w3-black">Get your results here</a>
+	<p>Click to calculate your results!</p>
+	<a href="#results" onclick="getresults();" class="w3-btn w3-pink w3-round">Get your results here</a>
 	<p id="results-section"></p>
 		
 </div><!--/changing html content using innerhtml property -->
