removing disliked button edits

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ after initially displaying ant htmml body not part of a page first-->
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
         	<p>Are your eyes watery or itchy?</p>
-		<a href="#two" onclick="allergyAdd();" class="w3-btn w3-hover-blue-gray"> Yes</a>
-		<a href="#two" onclick="coldAdd();" class="w3-btn w3-hover-teal"> No</a>
+		<a href="#two" onclick="allergyAdd();" class="w3-btn w3-blue-gray"> Yes</a>
+		<a href="#two" onclick="coldAdd();" class="w3-btn w3-teal"> No</a>
     	</div><!--/content -->
 </div>
 
@@ -119,8 +119,8 @@ after initially displaying ant htmml body not part of a page first-->
 	
 	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
 		<p>Do you have a fever?</p>
-		<a href="#three" onclick="coldAdd();" class="w3-btn w3-hover-blue-gray"> Yes</a>
-		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-hover-teal"> No</a>
+		<a href="#three" onclick="coldAdd();" class="w3-btn w3-blue-gray"> Yes</a>
+		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-teal"> No</a>
 	</div><!--/content -->
 </div>	
 
@@ -131,8 +131,8 @@ after initially displaying ant htmml body not part of a page first-->
 	
 	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
 		<p>Do you have a sore throat?</p>
-		<a href="#four" onclick="coldAdd();" class="w3-btn w3-hover-blue-gray"> Yes</a>
-		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-hover-teal"> No</a>
+		<a href="#four" onclick="coldAdd();" class="w3-btn w3-blue-gray"> Yes</a>
+		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-teal"> No</a>
 	</div><!--/content -->
 </div>
 	
@@ -143,8 +143,8 @@ after initially displaying ant htmml body not part of a page first-->
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
         	<p>Are your symptoms seasonal or chronic?</p>
-		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-hover-blue-gray"> Yes</a>
-		<a href="#five" onclick="coldAdd();" class="w3-btn w3-hover-teal"> No</a>
+		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-blue-gray"> Yes</a>
+		<a href="#five" onclick="coldAdd();" class="w3-btn w3-teal"> No</a>
     	</div><!--/content -->
 </div>
 	
@@ -155,8 +155,8 @@ after initially displaying ant htmml body not part of a page first-->
 	
 	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
 		<p>Do you have general aches and pains?</p>
-		<a href="#six" onclick="coldAdd();" class="w3-btn w3-hover-blue-gray"> Yes</a>
-		<a href="#six" onclick="allergyAdd();" class="w3-btn w3-hover-teal"> No</a>
+		<a href="#six" onclick="coldAdd();" class="w3-btn w3-blue-gray"> Yes</a>
+		<a href="#six" onclick="allergyAdd();" class="w3-btn w3-teal"> No</a>
 	</div><!--/content -->
 </div>
 	
@@ -167,8 +167,8 @@ after initially displaying ant htmml body not part of a page first-->
 	
     	<div id="content" class="w3-container"><!--/button code to trigger JavaScript event -->
         	<p>Is your mucus thin and watery?</p>
-		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-hover-blue-gray"> Yes</a>
-		<a href="#results" onclick="coldAdd();" class="w3-btn w3-hover-teal"> No</a>
+		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-blue-gray"> Yes</a>
+		<a href="#results" onclick="coldAdd();" class="w3-btn w3-teal"> No</a>
     	</div><!--/content -->
 </div>
 
@@ -177,9 +177,9 @@ after initially displaying ant htmml body not part of a page first-->
 		<h1>Results</h1>
 	</div>
 	
-	<p>Click to calculate your results!</p>
-	<a href="#results" onclick="getresults();" class="w3-btn w3-pink w3-round-xxlarge">Get your results here</a>
-	<p id="results-section"></p>
+		<p>Click to calculate your results!</p>
+		<a href="#results" onclick="getresults();" class="w3-btn w3-pink w3-round-xxlarge">Get your results here</a>
+		<p id="results-section"></p>
 		
 </div><!--/changing html content using innerhtml property -->
 
